# matrix

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: matrix.cpp  matrix.h  matrix_factory.h  square_matrix.cpp  square_matrix.h  vector.h
src/: CMakeLists.txt  matrix_factory.cpp
test/src/: CMakeLists.txt  test_constructor.cpp  test_operators.cpp
